gh-364 fix footer spacing for mobile

--- a/_scss/components/_component-footer.scss
+++ b/_scss/components/_component-footer.scss
@@ -1,12 +1,24 @@
 @import '../mixins/mixins-breakpoints';
+@import '../variables/var-scale';
 
 footer {
-    padding: 2em;
     color: $color-white;
     width: 100%;
     @media screen and (min-width: 48em) {
         display: flex;
         justify-content: space-between;
+    }
+}
+
+@include breakpoint(smallOnly) {
+    footer {
+        padding: $scale-0;
+    }
+}
+
+@include breakpoint(mediumUp) {
+    footer {
+        padding: $scale-2;
     }
 }
 
